Added user friendly features

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -14,9 +14,9 @@
                 <p>
                     <a href="mailto:rajarojamatrimony@gmail.com">rajarojamatrimony@gmail.com</a>
                     <br>
-                    <a href="">+91 9944468585</a>
+                    <a href="tel:9344737090" class="text-white">Call now</a>
                     <br>
-                    <a href="">+91 9095999111</a>
+                    <a href="https://api.whatsapp.com/send?phone=919944468585">WhatsApp us</a>
                 </p>
             </section>
         </div>
