--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,8 +2,8 @@
     <p class="text-white mb-0"><strong>Prop: RajaSimman, Astrologer</strong></p>
     <div class="ml-auto text-white">
         <p class="mb-0">
-            <strong>
-                +91 9344737090 
+            <strong> 
+                <a href="tel:9344737090" class="text-white">Contact: 9344737090</a>
                 <a href="mailto:rajarojamatrimony@gmail.com" class="text-white">&nbsp;&nbsp; rajarojamatrimony@gmail.com</a>
             </strong>
         </p>
