--- a/src/app/profiles/profiles.component.html
+++ b/src/app/profiles/profiles.component.html
@@ -61,7 +61,12 @@
 <div class="container-fluid" *ngIf="!isFilter">
     <div class="mt-5 mb-5 col-10 mx-auto text-center card-columns rounded">
         <div *ngFor="let profile of profiles; index as i" class="card mt-5 mb-5 text-center">
-            <img class="card-img-top img-fluid" src={{profile.image}} alt="Card image">
+            <div *ngIf="profile.gender != 'male'">
+                <img class="card-img-top img-fluid" src={{profile.image}} onError="this.onerror=null;this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSo7WfE6wFfdpeFph92LdEFJFnula0ecIObiQ&usqp=CAU';" alt="Card image">
+            </div>
+            <div *ngIf="profile.gender != 'female'">
+                <img class="card-img-top img-fluid" src={{profile.image}} onError="this.onerror=null;this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSfmJO1vZOid-nPBHG4aMhenFmy5zW4qPg_-g&usqp=CAU';" alt="Card image">
+            </div>
             <div class="card-body p-1">
                 <h5 class="text-center">{{ profile.name | titlecase }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
                 <h6 class="text-center">DOB:  <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
@@ -76,7 +81,7 @@
 <div class="container-fluid" *ngIf="isFilter">
     <div class="mt-5 mb-5 col-10 mx-auto text-center card-columns rounded">
         <div *ngFor="let profile of filteredProfiles; index as i" class="card mt-5 mb-5 text-center">
-            <img class="card-img-top img-fluid" src={{profile.image}} alt="Card image">
+            <img class="card-img-top img-fluid" src={{profile.image}} onError="this.onerror=null;this.src='https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcSo7WfE6wFfdpeFph92LdEFJFnula0ecIObiQ&usqp=CAU';" alt="Card image">
             <div class="card-body p-1">
                 <h5 class="text-center">{{ profile.name | titlecase }}<small *ngIf="profile.age"> - {{ profile.age }}</small></h5>
                 <h6 class="text-center">DOB: <small *ngIf="profile.dob; else elseNil">{{ profile.dob }}</small></h6>
