--- a/src/app/register/register.component.css
+++ b/src/app/register/register.component.css
@@ -87,6 +87,7 @@ label.myLabel input[type="file"] {
     background-image: linear-gradient(to right, rgb(67, 180, 245), cyan, rgb(67, 180, 245) );
     display: inline-block;
 }
+
 .myLabel:hover {
     cursor: pointer;
     background-image: linear-gradient(to right, rgb(2, 55, 228), rgb(67, 180, 245), rgb(2, 55, 228));
@@ -95,38 +96,59 @@ label.myLabel input[type="file"] {
 .myLabel :invalid + span {
     color: #A44;
 }
+
 .myLabel :valid + span {
     color: #4A4;
+}
+
+.resetLabel {
+    border: none;
+    border-radius: 4px;
+    padding: 2px 5px;
+    margin: 2px;
+    background-image: linear-gradient(to right, rgb(2, 55, 228), rgb(67, 180, 245), rgb(2, 55, 228));
+    display: inline-block;
+}
+
+.resetLabel:hover {
+    cursor: pointer;
+    background-image: linear-gradient(to right, rgb(228, 2, 2), rgb(252, 113, 103), rgb(228, 2, 2));
 }
 /* ======================================================================================== */
 @media screen and (max-height: 570px) {
     .card img {
         height: 100px;
+        width: 100px;
     }
 }
 
 @media screen and (min-height: 571px) and (max-height: 670px) {
     .card img {
-        height: 110px;
+        height: 160px;
+        width: 160px;
     }
 }
 @media screen and (min-height: 671px) and (max-height: 840px) {
     .card img {
-        height: 100px;
+        height: 160px;
+        width: 160px;
     }
 }
 @media screen and (min-height: 841px) and (max-height: 1025px) {
     .card img {
-        height: 200px;
+        width: 190px;
+        height: 190px;
     }
 }
 @media screen and (min-height: 1026px) and (max-height: 1400px) {
     .card img {
-        height: 250px;
+        height: 200px;
+        width: 200px;
     }
 }
 @media screen and (min-width:1025px) {
     .card img {
-        height:300px;
+        height:200px;
+        width: 200px;
     }
 }
