--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -5,20 +5,67 @@
                 <fieldset class="border-custom card rounded mt-5">
                     <h2 class="text-center card-header text-white">Personal details</h2>
 
-                    <aside class="container mt-5 mb-4 text-center">
-                        <div class="col-4 mx-auto" *ngIf="imgURL">
-                            <img [src]="imgURL" class="card card-img-top rounded img-fluid">
+                    <div class="form-group container justify-content-center">
+                        <div class="text-center p-3">
+                            <div *ngIf="imgURL">
+                                <img [src]="imgURL" class="card card-img-top rounded img-fluid mx-auto d-block">
+                            </div>
+                            <div *ngIf="!imgURL">
+                                <label class="myLabel text-white btn p-1">
+                                    <input #file type="file" accept='image/*' (change)="preview(file.files)" id="img" class="inputfile"/>
+                                    <div>
+                                        <i class="fa fa-upload" aria-hidden="true"></i>
+                                        <span><strong>&nbsp;&nbsp;Upload photo 1</strong></span>
+                                    </div>
+                                </label>
+                            </div>
+                            <div *ngIf="imgURL">
+                                <label class="resetLabel text-white">
+                                    <div (click)="resetFileUploader()">Reset image</div>
+                                </label>
+                            </div>
                         </div>
-                        <div>
-                            <label class="myLabel text-white btn btn-lg p-1">
-                                <input #file type="file" accept='image/*' (change)="preview(file.files)" class="inputfile"/>
-                                <div>
-                                    <i class="fa fa-upload" aria-hidden="true"></i>
-                                    <span><strong>&nbsp;&nbsp;Upload the photo&hellip;</strong></span>
-                                </div>
-                            </label>
+
+                        <div *ngIf="imgURL" class="text-center p-2">
+                            <div *ngIf="imgURL1">
+                                <img [src]="imgURL1" class="card card-img-top rounded img-fluid mx-auto d-block">
+                            </div>
+                            <div *ngIf="!imgURL1">
+                                <label class="myLabel text-white btn p-1">
+                                    <input #file type="file" accept='image/*' (change)="preview1(file.files)" class="inputfile"/>
+                                    <div>
+                                        <i class="fa fa-upload" aria-hidden="true"></i>
+                                        <span><strong>&nbsp;&nbsp;Upload photo 2</strong></span>
+                                    </div>
+                                </label>
+                            </div>
+                            <div *ngIf="imgURL1">
+                                <label class="resetLabel text-white">
+                                    <div (click)="resetFileUploader1()">Reset image</div>
+                                </label>
+                            </div>
                         </div>
-                    </aside>
+                        
+                        <div *ngIf="imgURL && imgURL1" class="text-center p-3">
+                            <div *ngIf="imgURL2">
+                                <img [src]="imgURL2" class="card card-img-top rounded img-fluid mx-auto d-block">
+                            </div>
+                            <div *ngIf="!imgURL2">
+                                <label class="myLabel text-white btn p-1">
+                                    <input #file type="file" accept='image/*' (change)="preview2(file.files)" class="inputfile"/>
+                                    <div>
+                                        <i class="fa fa-upload" aria-hidden="true"></i>
+                                        <span><strong>&nbsp;&nbsp;Upload photo 3</strong></span>
+                                    </div>
+                                </label>
+                            </div>
+                            <div *ngIf="imgURL2">
+                                <label class="resetLabel text-white">
+                                    <div (click)="resetFileUploader2()">Reset image</div>
+                                </label>
+                            </div>
+                        </div>
+                    </div>
 
                     <div class="container col-12 text-secondary pt-4 pb-5">
                         <div class="form-group mb-2 row col-10 mx-auto">
