--- a/src/app/profile-detail/profile-detail.component.html
+++ b/src/app/profile-detail/profile-detail.component.html
@@ -7,27 +7,30 @@
                     <div class="profile col-4 mx-auto mb-5 mt-5">
                         <div class="carousel slide" data-ride="carousel" id="slider">
                             <ol class="carousel-indicators">
-                                <li data-target="#slider1" data-slide-to="0" class="active"></li>
-                                <li data-target="#slider2" data-slide-to="1"></li>
-                                <li data-target="#slider3" data-slide-to="2"></li>
+                                <li data-target="#slider" data-slide-to="0" class="active" *ngIf="profile.image"></li>
+                                <li data-target="#slider" data-slide-to="1" *ngIf="profile.image1"></li>
+                                <li data-target="#slider" data-slide-to="2" *ngIf="profile.image2"></li>
                             </ol>
                             <div class="carousel-inner">
-                                <div class="item active" id="slider1">
+                                <div class="carousel-item active" *ngIf="profile.image; else elseImg">
                                     <img src={{profile.image}} class="card card-img-top rounded img-fluid" alt="No images available">
                                 </div>
-                                <div class="item" id="slider2">
-                                    <img src={{profile.image1}} class="card card-img-top rounded img-fluid" alt="No images available">
+                                <ng-template #elseImg>
+                                    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcS3gBEL8xB2bqkGznLEE42ag_IQhAbckmKS7Q&usqp=CAU" class="card card-img-top rounded img-fluid" alt="No images available">
+                                </ng-template>
+                                <div class="carousel-item" *ngIf="profile.image1">
+                                    <img src={{profile.image1}} class="card card-img-top rounded img-fluid" alt="No image available">
                                 </div>
-                                <div class="item" id="slider3">
-                                    <img src={{profile.image2}} class="card card-img-top rounded img-fluid"alt="No images available">
+                                <div class="carousel-item" *ngIf="profile.image2">
+                                    <img src={{profile.image2}} class="card card-img-top rounded img-fluid" alt="No image 3 available">
                                 </div>
                             </div>
-                            <a href="#slider" class="left carousel-control" data-slide="prev">
-                                <span class="glyphicon glyphicon-chevron-left"></span>
+                            <a href="#slider" class="carousel-control-prev" data-slide="prev" *ngIf="profile.image && profile.image1">
+                                <span class="carousel-control-prev-icon"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a href="#slider" class="right carousel-control" data-slide="next">
-                                <span class="glyphicon glyphicon-chevron-right"></span>
+                            <a href="#slider" class="carousel-control-next" data-slide="next" *ngIf="profile.image && profile.image1">
+                                <span class="carousel-control-next-icon"></span>
                                 <span class="sr-only">Next</span>
                             </a>
                         </div>
