Modified for Authentication and style

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,7 +2,7 @@
     <div class="container text-white text-center pt-2 mt-5">
         <h3><strong>ராஜா ரோஜா திருமண இணையம்</strong></h3>
     </div>
-    <div class="row text-center">
+    <div class="text-center">
         <div class="container">
 
             <aside class="text-center text-white">
