--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -35,8 +35,16 @@
             <li class="nav-item"><a class="nav-link" routerLink='/about'>About us</a></li>
             <li class="nav-item"><a class="nav-link" routerLink='/profiles'>Profiles</a></li>
             <li class="nav-item"><a class="nav-link" routerLink='/payments'>Payments</a></li>
-            <li class="nav-item"><a class="nav-link" routerLink='/register'>Register</a></li>
-            <li class="nav-item"><a class="nav-link" data-target="#login-modal" data-toggle="modal">Login</a></li>
+            <li class="nav-item dropdown" *ngIf="isLogged">
+                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">My Profile</a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdownMenuLink">
+                    <a class="dropdown-item text-dark" (click)="viewMyProfile()">View Profile</a>
+                    <a class="dropdown-item text-dark" href="#">Edit Profile</a>
+                    <a class="dropdown-item text-dark" (click)="onLogout()">Log Out</a>
+                </div>
+            </li>
+            <li class="nav-item" *ngIf="!isLogged"><a class="nav-link" routerLink='/register'>Register</a></li>
+            <li class="nav-item" *ngIf="!isLogged"><a class="nav-link" data-target="#login-modal" data-toggle="modal">Login</a></li>
         </ul>
  
         <form novalidate [formGroup]="loginForm" autocomplete="off">
@@ -61,7 +69,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" routerLink="/profiles" (click)='onSubmit()' data-dismiss="modal">Submit</button>
+                            <button type="submit" class="btn btn-primary" (click)='onSubmit()' data-dismiss="modal">Submit</button>
                         </div>
                     </div>
                 </div>
