--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -77,3 +77,7 @@ nav h5 {
 .modal-header {
     background-image: linear-gradient(to right, rgb(2, 55, 228), rgb(67, 180, 245), rgb(2, 55, 228));
 }
+
+.dropdown-toggle {
+    cursor: pointer;
+}
