--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,1 +1,1 @@
-<app-register [formGroup]="updateForm" (ngSubmit)="onSubmit()" #child></app-register>
+<app-register [id]=id [isUpdate]=isUpdate></app-register>
