--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -69,7 +69,7 @@
                         </div>
                         <div class="modal-footer">
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                            <button type="submit" class="btn btn-primary" (click)='onSubmit()' data-dismiss="modal">Submit</button>
+                            <button type="submit" class="btn btn-primary" (click)='onSubmit()' routerLink="/home" data-dismiss="modal">Submit</button>
                         </div>
                     </div>
                 </div>
