--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -67,12 +67,12 @@
                         </div>
                     </div>
 
-                    <div *ngIf="this.isUpdate" class="form-group container justify-content-center">
+                    <!-- <div *ngIf="this.isUpdate" class="form-group container justify-content-center">
                         <div class="text-center p-3">
-                            <div *ngIf="uImgURL">
+                            <div *ngIf="uImgURL?.length > 10">
                                 <img [src]="uImgURL" class="card card-img-top rounded img-fluid mx-auto d-block">
                             </div>
-                            <div *ngIf="!uImgURL">
+                            <div *ngIf="!uImgURL || uImgURL?.length < 10">
                                 <label class="myLabel text-white btn p-1">
                                     <input #file type="file" accept='image/*' (change)="upreview(file.files)" id="img" class="inputfile"/>
                                     <div>
@@ -81,7 +81,7 @@
                                     </div>
                                 </label>
                             </div>
-                            <div *ngIf="uImgURL">
+                            <div *ngIf="uImgURL?.length > 10">
                                 <label class="resetLabel text-white">
                                     <div (click)="uresetFileUploader()">Reset image</div>
                                 </label>
@@ -89,7 +89,7 @@
                         </div>
 
                         <div *ngIf="uImgURL" class="text-center p-2">
-                            <div *ngIf="uImgURL1">
+                            <div *ngIf="uImgURL1?.length > 10">
                                 <img [src]="uImgURL1" class="card card-img-top rounded img-fluid mx-auto d-block">
                             </div>
                             <div *ngIf="!uImgURL1">
@@ -101,7 +101,7 @@
                                     </div>
                                 </label>
                             </div>
-                            <div *ngIf="uImgURL1">
+                            <div *ngIf="uImgURL1?.length > 10">
                                 <label class="resetLabel text-white">
                                     <div (click)="uresetFileUploader1()">Reset image</div>
                                 </label>
@@ -109,10 +109,10 @@
                         </div>
                         
                         <div *ngIf="uImgURL && uImgURL1" class="text-center p-3">
-                            <div *ngIf="uImgURL2">
+                            <div *ngIf="uImgURL2?.length > 10">
                                 <img [src]="uImgURL2" class="card card-img-top rounded img-fluid mx-auto d-block">
                             </div>
-                            <div *ngIf="!uImgURL2">
+                            <div *ngIf="!uImgURL2 || uImgURL2?.length < 10">
                                 <label class="myLabel text-white btn p-1">
                                     <input #file type="file" accept='image/*' (change)="upreview2(file.files)" class="inputfile"/>
                                     <div>
@@ -121,14 +121,13 @@
                                     </div>
                                 </label>
                             </div>
-                            <div *ngIf="uImgURL2">
+                            <div *ngIf="uImgURL2?.length > 10">
                                 <label class="resetLabel text-white">
                                     <div (click)="uresetFileUploader2()">Reset image</div>
                                 </label>
                             </div>
                         </div>
-                    </div>
-
+                    </div> -->
 
                     <!-- <div *ngIf="this.isUpdate" class="form-group container justify-content-center">
                         <div class="text-center p-3">
